--- a/wt-app/package.json
+++ b/wt-app/package.json
@@ -12,9 +12,7 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.4",
-    "react-native-web": "~0.18.7",
-    "react-dom": "18.0.0"
+    "react-native": "0.69.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
